force-app/main/default/objects/Answer__c/fields/Answered_Date__c.field-meta.xml
<CustomField>
    <fullName>Answered_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Answered Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>