force-app/main/default/objects/Answer__c/fields/Survey_Instance__c.field-meta.xml
<CustomField>
    <fullName>Survey_Instance__c</fullName>
    <label>Survey Instance</label>
    <referenceTo>Survey_Instance__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>